--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <div class="color-btn-field">
       <p>Hex <span id="hex" value="" onclick="copyHexValue()"></span></p>
       <p>RGB <span id="rgb" value="" onclick="copyRGBValue()"></span></p>
-      <div id="color-box"></div><br>
-      <input type="text" id="hex-c" value="" /><br />
-      <input type="text" id="rgb-c" value="" />
+      <div class="color-box-wrapper">
+        <div id="color-box"></div>
+      </div>
+      <br />
+      <input type="text" id="hex-c" value="" readonly/><br />
+      <input type="text" id="rgb-c" value="" readonly/>
       <br />
       <button class="btn" onclick="colorChange()">
         Click me!
@@ -32,10 +35,17 @@
     <footer class="container-fluid text-center">
       <span style="font-weight: 600;">
         Random Color Generator by
-        <a href="#" target="_blank" rel="nofollow" id="my-link">pedjango</a>
+        <a
+          href="https://github.com/pedjango/random-color-generator"
+          target="_blank"
+          rel="nofollow"
+          id="my-link"
+          >pedjango</a
+        >
       </span>
     </footer>
 
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   </body>
 </html>
